# bittide-hardware

./: .envrc  .gitignore  Cargo.toml  Makefile  cabal.project  cargo.sh  docsssss  shell.nix
.github/synthesis/: staging.json
.github/workflows/: ci.yml
.reuse/: dep5
bittide/: bittide.cabal
bittide-ctrl/: Cargo.toml
bittide-ctrl/src/: lib.rs  program_stream.rs
bittide-extra/: bittide-extra.cabal
bittide-extra/data/ethernet/: dna_test.v  server.py  server_broadcast_loopback.py  server_leds.py  server_udp_loss_test.py  tmp  udp-core.v  udp-leds.tcl  udp-loopback-core.v
bittide-extra/src/Bittide/Extra/: DeviceId.hs  Maybe.hs  Wishbone.hs
bittide-extra/src/Clash/Explicit/Signal/: Extra.hs
bittide-instances/: bittide-instances.cabal
bittide-instances/data/constraints/: clockControlDemo2.xdc  syncLineTest.xdc  testGth.xdc  vexRiscHello.xdc
bittide-instances/demo-files/binaries/: hello
bittide-instances/src/Bittide/Instances/: ClockControl.hs  Domains.hs  Ethernet.hs  MVPs.hs  ProcessingElement.hs  Si539xSpi.hs  SyncLineTest.hs
bittide-instances/src/Bittide/Instances/ClockControl/: Registers.hs
bittide-instances/src/Bittide/Instances/ClockControl/Strategies/: Callisto.hs
bittide-instances/src/Bittide/Instances/Tests/: VexRiscv.hs
bittide-instances/src/Clash/Shake/: Extra.hs  Vivado.hs
bittide-rust-ffi/: Setup.lhs  bittide-rust-ffi.cabal
bittide-rust-ffi/exe/: Main.hs
bittide-rust-ffi/src/: lib.rs
bittide-shake/: bittide-shake.cabal
bittide-shake/data/tcl/: HardwareTest.tcl
bittide-shake/src/Clash/Shake/: Cargo.hs  Vivado.hs
bittide/src/Bittide/: Axi4.hs  Calendar.hs  ClockControl.hs  DoubleBufferedRAM.hs  DoubleBufferedRam.hs  Ethernet.hs  Link.hs  MemoryMap.hs  Node.hs  ProcessingElement.hs  ScatterGather.hs  SharedTypes.hs  Switch.hs  Transceiver.hs  Wishbone.hs
bittide/src/Bittide/Arithmetic/: Ppm.hs  Time.hs
bittide/src/Bittide/ClockControl/: Callisto.hs  Registers.hs  Si5395J.hs  Si539xSpi.hs  StabilityChecker.hs
bittide/src/Bittide/ClockControl/Callisto/: Rust.hs  Types.hs
bittide/src/Bittide/Ethernet/: Mac.hs  Types.hs
bittide/src/Bittide/ProcessingElement/: DeviceTreeCompiler.hs  Util.hs
bittide/src/Clash/Cores/Xilinx/GTH/: BlackBoxes.hs  Internal.hs
bittide/src/Clash/Explicit/Reset/: Extra.hs
bittide/src/Clash/Functor/: Extra.hs
bittide/src/Data/Bool/: Extra.hs
bittide/src/Data/Constraint/Nat/: Extra.hs
bittide/tests/: UnitTests.hs  doctests.hs
bittide/tests/Tests/: Axi4.hs  Calendar.hs  DoubleBufferedRAM.hs  DoubleBufferedRam.hs  Haxioms.hs  Link.hs  ScatterGather.hs  Shared.hs  Switch.hs
bittide/tests/Tests/ProcessingElement/: ReadElf.hs
callisto-rust-ffi/: Cargo.toml  callisto-rust-ffi.cabal  hsbindgen.toml
callisto-rust-ffi/exe/: Main.hs  Sizes.hs
callisto-rust-ffi/src/: lib.rs
contranomy/: Makefile  contranomy.cabal  crt0.s  linker.ld  main.elf  tags
contranomy-loaded-program/: Cargo.toml  memory.x
contranomy-loaded-program/src/: main.rs
contranomy-loader/: Cargo.toml
contranomy-loader/src/: elf_validation.rs  main.rs
contranomy-rs-crates/contranomy-debug/: Cargo.toml
contranomy-rs-crates/contranomy-debug/src/: character_device.rs
contranomy-sim/: contranomy-sim.cabal
contranomy-sim/devicetree/: contranomy-sim.dts
contranomy-sim/src/ContranomySim/: MemoryMapConsts.hs  ReadElf.hs
contranomy-sim/tests/: tests.hs
contranomy-sim/tests/Tests/ContranomySim/: FirmwareIntegrationTests.hs
contranomy/src/: Contranomy.hs
contranomy/src/Contranomy/: MemoryMap.hs  Println.hs  Wishbone.hs
elastic-buffer-sim/: SIMULATE.md  cabal.project  elastic-buffer-sim.cabal  script.py  script2.py
elastic-buffer-sim/exe/: Main.hs
elastic-buffer-sim/src/: Arithmetic.hs
elastic-buffer-sim/src/Bittide/: ClockControl.hs  Layout.hs  Simulate.hs  Topology.hs
elastic-buffer-sim/src/Bittide/ClockControl/: ElasticBuffer.hs  Strategies.hs
elastic-buffer-sim/src/Bittide/ClockControl/Strategies/: Callisto.hs
elastic-buffer-sim/src/Bittide/Simulate/: Arithmetic.hs  Ppm.hs  Time.hs
elastic-buffer-sim/src/Bittide/Topology/: Graph.hs  TH.hs
elastic-buffer-sim/tests/: unittests.hs
elastic-buffer-sim/tests/Tests/Bittide/: Simulate.hs
firmware-binaries/: Cargo.toml
firmware-binaries/bootloader/: Cargo.toml
firmware-binaries/bootloader/src/: main.rs
firmware-support/bittide-sys/: Cargo.toml
firmware-support/bittide-sys/tests/: program_stream.rs
firmware/bittide-sys/: Cargo.toml
firmware/bittide-sys/src/: clock_control.rs  elastic_buffer.rs  lib.rs  timer.rs  uart.rs
firmware/examples/: Cargo.toml
firmware/examples/clock-control/: Cargo.toml  memory.x
firmware/examples/clock-control/src/: main.rs
firmware/examples/hello/: memory.x
firmware/examples/processing-element-test/src/: main.rs
firmware/examples/smoltcp-echo/: Cargo.toml
firmware/examples/smoltcp-echo/src/: main.rs
firmware/examples/smoltcp-example/src/: main.rs
firmware/programs/: Cargo.toml
firmware/programs/bootloader/: Cargo.toml  memory.x
firmware/programs/bootloader/src/: main.rs
host-tools/: Cargo.toml
host-tools/bittide-ctrl/: Cargo.toml
host-tools/bittide-ctrl/src/: lib.rs  program_stream.rs
vex-riscv/: .gitignore  Makefile  README.md  Setup.hs  vex-riscv.cabal
vex-riscv/app/: Test.hs
vex-riscv/bittide-cpu/: .gitignore  build.sbt
vex-riscv/bittide-cpu/src/main/scala/bittide/: BittideCpu.scala
vex-riscv/src/: VexRiscv.hs
vex-riscv/src/Utils/: DeviceTreeCompiler.hs  MemoryMapConsts.hs  Print.hs  ReadElf.hs
vex-riscv/src/VexRiscv/: FFI.hsc
vex-riscv/src/ffi/: impl.cpp  interface.h
vex-riscv/tests/: tests.hs
vex-riscv/vex-test-program/: Cargo.toml
vex-riscv/vex-test-programs/: Cargo.toml
